@@ -106,7 +106,7 @@ class plgSearchCategories extends JPlugin
 
 		$return = array();
 		if (!empty($state)) {
-			$query->select('a.title, a.description AS text, "" AS created, "2" AS browsernav, a.id AS catid, '
+			$query->select('a.title, a.description AS text, a.created_time AS created, "2" AS browsernav, a.id AS catid, '
 						.'CASE WHEN CHAR_LENGTH(a.alias) THEN CONCAT_WS(":", a.id, a.alias) ELSE a.id END as slug');
 			$query->from('#__categories AS a');
 			$query->where('(a.title LIKE '. $text .' OR a.description LIKE '. $text .') AND a.published IN ('.implode(',',$state).') AND a.extension = \'com_content\''
